# headson

./: .clippy.toml  .gitattributes  .gitignore  .pre-commit-config.yaml  .release-plz.toml  .releaserc.json  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  build.rs  main.py  pyproject.toml  pytest.ini  renovate.json
.cargo/: config.toml
.github/workflows/: audit.yml  build.yml  ci.yml  clippy.yml  commit-messages.yml  coverage.yml  release-plz.yml  rustfmt.yml  udeps.yml
diagrams/: algorithm.mmd  mermaid.config.json  mermaid.css
docs/diagrams/: algorithm.mmd  mermaid.config.json  mermaid.css  postprocess.js
docs/tapes/: demo.tape
examples/: genfixture.rs
python/: Cargo.toml  README.md
python/headson/: __init__.py
python/src/: lib.rs
scripts/: bench_hyperfine.sh
src/: format.rs  json_ingest.rs  lib.rs  main.rs  order.rs  queue.rs  render.rs  search.rs  stream_arena.rs  tree.rs
src/ingest/: json.rs  mod.rs  text.rs  yaml.rs
src/json_ingest/: array_sample.rs  builder.rs  mod.rs
src/json_ingest/samplers/: default.rs  (+3 more)
src/order/: build.rs  mod.rs  scoring.rs  types.rs
src/serialization/: color.rs  fileset.rs  mod.rs  output.rs  types.rs
src/snapshots/: headson__order__tests__order_empty_array_order.snap  headson__order__tests__order_single_string_array_order.snap  headson__order__tests__pq_empty_array_queue.snap  headson__order__tests__pq_single_string_array_queue.snap  headson__queue__tests__pq_empty_array_queue.snap  headson__queue__tests__pq_single_string_array_queue.snap  headson__tree__tests__arena_render_empty.snap  headson__tree__tests__arena_render_single.snap  headson__tree__tests__build_tree_empty.snap
src/templates/: mod.rs  pseudo.rs
src/text_ingest/: mod.rs
src/utils/: arena.rs  graph.rs  mod.rs  num.rs  text.rs  tree_arena.rs
src/yaml_ingest/: mod.rs
templates/: README.md  js_object.askama  json_array.askama  pseudo_array.askama  pseudo_object.askama
templates/js/: array.askama  object.askama
templates/json/: array.askama  object.askama
templates/pseudo/: array.askama  object.askama
test_support/: mod.rs
tests/: array_caps.rs  array_format.rs  array_head.rs  array_tail.rs  auto_stdin.rs  budget_zero.rs  cli.rs  cli_color.rs  cli_conflicts.rs  cli_input.rs  color_budget_mismatch.rs  color_mode.rs  color_omission.rs  combined_limits.rs  compact.rs  e2e.rs  e2e_grep_weak.rs  e2e_grep_weak_fileset.rs  e2e_head.rs  e2e_json_parse.rs  e2e_tail.rs  fileset_auto.rs  fileset_auto_case_insensitive.rs  fileset_auto_ingest.rs  fileset_auto_text_unknown.rs  fileset_auto_yaml_seq.rs  fileset_js.rs  fileset_json.rs  fileset_override.rs  fileset_pseudo.rs  fileset_yaml.rs  global_limit.rs  grep_weak.rs  headson_many_text.rs  json_par_files.rs  json_parse_files.rs  json_parsing.rs  monotonicity.rs  multi_input.rs  multi_input_binary.rs  (+25 more)
tests/e2e_inputs/: complex_nested.json  nested_object.json  string_long.json
tests/snapshots/: combined_limits__combined_limits_single_file_pseudo_min80.snap  combined_limits__combined_limits_two_files_json_min120.snap  (+1436 more)
tests_py/: conftest.py  test_bindings_basic.py  test_summarize.py  test_text_mode.py  test_yaml_styles.py
(+24 files in other folders)
