[package]
name = "headson"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
priority-queue = "2.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
unicode-segmentation = "1.12.0"
fib-rs = "*"
num-bigint = "0.4"
askama = "0.12"

[dev-dependencies]
insta = "1.40.0"
assert_cmd = "2"
test_each_file = "0.3"
