[package]
name = "headson"
version = "0.1.0"
edition = "2024"
description = "Budget‑constrained JSON preview renderer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kantord/headson"
keywords = ["json", "cli", "render", "preview"]
categories = ["command-line-utilities", "parsing"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
unicode-segmentation = "1.12.0"
simd-json = { version = "0.13", features = ["serde_impl"] }

[dev-dependencies]
insta = "1.40.0"
assert_cmd = "2"
test_each_file = "0.3"
fake = "2"
rand = "0.8"
rand_chacha = "0.3"

[profile.release]
# Prioritize runtime speed for large inputs
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false
