[package]
name = "headson-python"
version = "0.2.0"
edition = "2021"
publish = false

[lib]
name = "headson"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
pyo3 = { version = "0.22", features = ["extension-module"] }
# Rename the dependency on the Rust crate to avoid name clash with this
# cdylib crate (Python module also named "headson").
headson_core = { package = "headson", path = ".." }
